sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:10: error: not found: value eccart
    if ((ecart==9)||(eccart==8)||(eccart==10)){
                     ^AlgCombSort11:10: error: not found: value eccart
    if ((ecart==9)||(eccart==8)||(eccart==10)){
                                  ^